# c-comprehensive-template

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .dockerignore  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md
.claude/skills/add-module/: SKILL.md
.github/workflows/: ci.yml  security.yml
cmake/: AGENTS.md  Platform.cmake  Security.cmake  Testing.cmake  ThirdParty.cmake
docs/: AGENTS.md  ARCHITECTURE.md  BEST_PRACTICES.md  CLI.md  CMakeLists.txt  CROSS_PLATFORM.md  EXTENDING.md  OPTIMIZATION.md  SECURITY_SCANNING.md  THIRD_PARTY.md  TOOLCHAIN.md  TUTORIAL.md  mainpage.md
examples/: AGENTS.md  CMakeLists.txt  arena_demo.c  benchmark_demo.c  cli_argtable_demo.c  cli_demo.c  containers_demo.c  echo_client_demo.c  echo_server_demo.c  evloop_server_demo.c  hpc_demo.c  math_demo.c  matmul_bench_demo.c  ml_demo.c  networking_demo.c  physics_demo.c  pipeline_demo.c  rendering_demo.c  simulation_demo.c  systems_demo.c  thread_pool_demo.c
include/: AGENTS.md
include/cli/: AGENTS.md  argparse.h  output.h
include/containers/: AGENTS.md  hash.h  hashmap.h  ringbuf.h  str.h  strbuf.h  vec.h
include/core/: AGENTS.md  error.h  log.h  time.h
include/hpc/: AGENTS.md  parallel.h  queue.h  simd_ops.h  thread_pool.h
include/math/: AGENTS.md  mat.h  matx.h  quat.h  rng.h  scalar.h  stats.h  vec.h
include/memory/: AGENTS.md  arena.h  leak_detect.h  pool.h
include/ml/: AGENTS.md  dataset.h  nn.h
include/networking/: AGENTS.md  event_loop.h  socket.h  udp.h  unix_socket.h
include/rendering/: AGENTS.md  gl_pipeline.h  software_renderer.h  vk_pipeline.h
include/simulation/: AGENTS.md  numerical.h  physics.h
include/systems/: AGENTS.md  file_io.h  path.h  process.h
include/testing/: AGENTS.md  perf_test.h
scripts/: AGENTS.md  new_module.sh
src/: AGENTS.md
src/cli/: AGENTS.md  argparse.c  output.c
src/containers/: AGENTS.md  hash.c  hashmap.c  ringbuf.c  str.c  strbuf.c  vec.c
src/core/: AGENTS.md  error.c  log.c  time.c
src/hpc/: AGENTS.md  parallel.c  queue.c  simd_ops.c  thread_pool.c
src/math/: AGENTS.md  mat.c  matx.c  quat.c  rng.c  stats.c  vec.c
src/memory/: AGENTS.md  arena.c  leak_detect.c  pool.c
src/ml/: AGENTS.md  dataset.c  nn.c
src/networking/: AGENTS.md  event_loop.c  socket.c  socket_internal.h  udp.c  unix_socket.c
src/rendering/: AGENTS.md  gl_pipeline.c  software_renderer.c  vk_pipeline.c
src/simulation/: AGENTS.md  numerical.c  physics.c
src/systems/: AGENTS.md  file_io.c  path.c  process.c
tests/: .clang-tidy  AGENTS.md  CMakeLists.txt  test_arena.c  test_cli.c  test_containers.c  test_event_loop.c  test_hpc.c  test_leak_detect.c  test_math.c  test_memory_cmocka.c  test_memory_unity.c  test_ml.c  test_networking.c  test_perf_memory.c  test_pool.c  test_queue.c  test_simulation.c  test_str_path.c
